<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">内涵段子</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_mainactivity">MainActivity</string>
    <string name="main_tab_item_text">段子</string>
    <string name="main_tab_item_image">图片</string>
    <string name="main_tab_item_review">审核</string>
    <string name="main_tab_item_activity">活动</string>
    <string name="main_tab_item_mine">我的</string>
    <string name="title_activity_essay_detail">EssayDetailActivity</string>
    <string name="essay_detail_title">详情</string>

</resources>
